--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/button';
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
+@import 'blocks/about';
 
 * {
     font-family: 'Poppins', sans-serif;
@@ -20,4 +21,11 @@
 .container {
     width: 1140px;
     margin: 0 auto;
+}
+
+.devider {
+    width: 60px;
+    height: 3px;
+    background-color: $main-color;
+    margin-top: 25px;
 }
