--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -17,6 +17,7 @@
     &__descr {
         padding-top: 6px;
         .devider {
+            margin: 0;
             margin-top: 5px;
         }
     }
