--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'blocks/resume';
 @import 'blocks/skills';
 @import 'blocks/portfolio';
+@import 'blocks/prices';
 
 * {
     font-family: 'Poppins', sans-serif;
