--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -61,4 +61,11 @@
             color: #000000;
         }
     }
+    &__btn {
+        border: none;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 21px;
+        color: #000000;
+    }
 }
