--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -99,6 +99,23 @@
             color: #000000;
         }
     }
+    &__triggers {
+        display: grid;
+        grid-column: 1 / 3;
+        grid-template-columns: repeat(2, auto);
+        column-gap: 35px;
+    }
+    &__policy {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 18px;
+        color: #000000;
+        display: flex;
+        align-items: center;
+        input {
+            margin-right: 10px;
+        }
+    }
     &__btn {
         border: none;
         font-weight: 700;
