--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -11,7 +11,9 @@
     &__photo {
         grid-row: 1/3;
         img {
+            object-fit: cover;
             width: 100%;
+            height: 100%;
         }
     }
     &__descr {
