--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -31,18 +31,35 @@
     }
     .skills {
         &__items {
-            grid-template-columns: repeat(3,minmax(270px,auto));
-        }
+            grid-template-columns: repeat(auto-fit, 270px);
+            justify-content: space-between;
+            }
         &__ratings {
-            margin-top: 60px;
-            grid-auto-rows: minmax(70px,auto);
-            grid-template-columns: repeat(2,455px);
-            &-item {
-                grid-template: minmax(21px,auto) 14px/200px 40px;
+            grid-template-columns: repeat(auto-fit, 350px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: space-between;
+            padding: 0 30px;
+        }
+    }
+    .portfolio {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 280px);
+            grid-auto-rows: 280px;
+            justify-content: space-around;
+            row-gap: 35px;
+            .horizontal, .vertical {
+                grid-row: unset;
+                grid-column: unset;
             }
-            &-line {
-                width: 450px;
-            }
+        }
+    }
+    .contacts {
+        &__wrapper {
+            padding: 0;
+            grid-template-columns: 400px 520px;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(2, 250px);
         }
     }
 }
@@ -76,24 +93,42 @@
         }
     }
     .skills {
-        &__items {
-            grid-template-columns: repeat(3,minmax(270px,auto));
-        }
         &__ratings {
             margin-top: 60px;
             grid-auto-rows: minmax(70px,auto);
-            grid-template-columns: repeat(2,455px);
-            &-item {
-                grid-template: minmax(21px,auto) 14px/200px 140px;
-            }
+            grid-template-columns: repeat(auto-fit,320px);
+            justify-content: space-between;
+            padding: 0;
+            column-gap: 0;
             &-line {
-                width: 350px;
+                width: 100%;
             }
+        }
+    }
+    .prices {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 350px);
+            padding: 0;
+        }
+    }
+    .contacts {
+        &__wrapper {
+            grid-template-columns: 300px 400px;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(2, 195px);
+        }
+        &__btn {
+            padding: 8px 25px;
+            line-height: 16px;
         }
     }
 }
 
 @media (max-width: 768px) {
+    .container {
+        max-width: 540px;
+    }
     .title {
         &_fz48 {
             font-size: 28px;
@@ -120,31 +155,52 @@
                 column-gap: 20px;
             }
         }
-        
     }
     .skills {
+        padding-top: 40px;
         &__items {
-            grid-template-columns: repeat(2,minmax(260px,auto));
+            padding: 0;
+            justify-content: center;
+            gap: 20px;
         }
         &__ratings {
-            grid-template-columns: 1fr;
-            margin-top: 60px;
+            grid-template-columns: repeat(auto-fit, 320px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: center;
+            margin-top: 40px;
             &-line {
-                width: 260px;
+                width: 100%;
             }
         }
-        
+    }
+    .portfolio {
+        padding-top: 40px;
+    }
+    .prices {
+        &__wrapper {
+            justify-content: center;
+        }
+    }
+    .contacts {
+        padding-top: 40px;
+        &__photo {
+            display: none;
+        }
+        &__wrapper {
+            grid-template-columns: 1fr;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(2, 250px);
+        }
     }
     
-    .container {
-        max-width: 540px;
-    }
+    
 }
 
 @media (max-width: 576px) {
     .container {
+        padding: 0 5px;
         max-width: 310px;
-        padding: 0 10px;
     }
     .title {
         &_fz48 {
@@ -171,7 +227,7 @@
             grid-template: 340px auto auto / 1fr;
         }
         &__skills {
-            grid-template-columns: 1fr;
+            grid-template-columns: 300px;
         }
         &__subtitle {
             margin-top: 25px;
@@ -193,22 +249,41 @@
         }
     }
     .skills {
-        &__items {
-            grid-template-columns: 1fr;
-            row-gap: 20px;
-        }
         &__subtitle {
             font-size: 24px;
             line-height: 36px;
         }
-        &__ratings {
-            margin-top: 40px;
-            &-line {
-                width: 300px;
-            }
-            &-item {
-                grid-template: minmax(21px,auto) 14px/200px 30px;
-            }
+        
+    }
+    .prices {
+        &__wrapper {
+            grid-template-columns: 1fr;
+        }
+    }
+    .contacts {
+        padding-bottom: 50px;
+        &__form {
+            grid-template: 45px 45px 190px minmax(45px, auto) / 1fr;
+        }
+        &__textarea {
+            grid-column: unset;
+            width: 100%;
+        }
+        &__triggers {
+            grid-column: unset;
+            grid-template-columns: 1fr;
+            column-gap: unset;
+            row-gap: 20px;
+        }
+        &__btn {
+            order: 2;
+            max-width: 220px;
+            margin: 0 auto;
+        }
+        &__policy {
+            width: 180px;
+            margin: 0 auto;
+            line-height: 18px;
         }
     }
 }
