--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -22,10 +22,20 @@
         .vertical {
             grid-row: 1 / 3;
             grid-column: 4 / 5;
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
         .horizontal {
             grid-row: 2 / 3;
             grid-column: 2 / 4;
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
     }
     &__item {
